# AK2_P

./: .gitignore  CMakeLists.txt
include/: Adder.h  Adder.hpp  Multiplier.h  ProposedIntegerMultiplier.hpp  SimpleMultiplier.hpp  Utils.h  Utils.hpp
src/: Adder.cpp  CMakeLists.txt  Multiplier.cpp  SimpleMultiplier.cpp  main.cpp
tests/: AdderTest.cpp  CMakeLists.txt  MultiplierTest.cpp  SimpleMultiplierTest.cpp
